app/src/style.css
@import url("https://fonts.googleapis.com/css2?family=Luckiest+Guy&display=swap");
@import url("https://fonts.googleapis.com/css2?family=Anton&family=Bebas+Neue&display=swap");

* {
  box-sizing: border-box;
}

body {
  margin: 0;
  font-family: "Luckiest Guy", cursive;
}

.nav--icon {
  width: 100px;
  margin-right: auto;
}

.nav--item {
  margin-right: auto;
  color: #ffffff;
  font-family: "Anton", sans-serif;
  font-size: 20px;
}

nav {
  height: 70px;
  display: flex;
  align-items: center;
  /* background-color: rgba(13, 13, 15, 0.75); */
  padding: 40px 25px;
  box-shadow: 0 3px 8px rgba(0, 0, 0, 0.1);
}

.main--body {
  padding: 57px 47px;
}

.main--body {
  padding: 57px 47px;
}

/*==============================
	Card
==============================*/
.card {
  margin-bottom: 30px;
  width: 200px;
}
.card__cover {
  position: relative;
  -webkit-box-shadow: none;
  box-shadow: none;
  -webkit-transition: 0.4s ease;
  -moz-transition: 0.4s ease;
  transition: 0.4s ease;
}
.card__cover img {
  width: 100%;
}
.card__cover:before {
  content: "";
  position: absolute;
  display: block;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  background-image: -moz-linear-gradient(90deg, #ff55a5 0%, #ff5860 100%);
  background-image: -webkit-linear-gradient(90deg, #ff55a5 0%, #ff5860 100%);
  background-image: -ms-linear-gradient(90deg, #ff55a5 0%, #ff5860 100%);
  background-image: linear-gradient(90deg, #ff55a5 0%, #ff5860 100%);
  z-index: 1;
  opacity: 0;
  -webkit-transition: 0.4s ease;
  -moz-transition: 0.4s ease;
  transition: 0.4s ease;
}
.card__cover:hover {
  -webkit-box-shadow: 0 0 20px 0 rgba(255, 88, 96, 0.5);
  box-shadow: 0 0 20px 0 rgba(255, 88, 96, 0.5);
}
.card__cover:hover:before {
  opacity: 0.65;
}
.card__cover:hover .card__play {
  opacity: 1;
}
.card__play {
  position: absolute;
  display: flex;
  justify-content: center;
  align-items: center;
  width: 60px;
  height: 60px;
  border: 2px solid #fff;
  -webkit-border-radius: 50%;
  border-radius: 50%;
  top: 50%;
  left: 50%;
  margin: -30px 0 0 -30px;
  z-index: 2;
  font-size: 30px;
  color: #fff;
  -webkit-transition: 0.4s ease;
  -moz-transition: 0.4s ease;
  transition: 0.4s ease;
  opacity: 0;
}
.card__play i {
  margin: 2px 0 0 3px;
}
.card__play:hover {
  color: #fff;
}
.card__content {
  position: relative;
  display: block;
  margin-top: 10px;
}
.card__title {
  font-size: 18px;
  font-weight: 400;
  color: rgb(0, 0, 0);
  margin: 0;
  overflow: hidden;
  white-space: nowrap;
  -o-text-overflow: ellipsis;
  text-overflow: ellipsis;
  word-wrap: break-word;
}
.card__title a {
  color: rgb(0, 0, 0);
}
.card__title a:hover {
  color: #fff;
}
.card__category {
  display: flex;
  flex-direction: row;
  justify-content: flex-start;
  align-items: flex-start;
  flex-wrap: wrap;
}
.card__category a {
  font-size: 14px;
  position: relative;
  background-image: -webkit-linear-gradient(0deg, #ff55a5 0%, #ff5860 100%);
  -webkit-background-clip: text;
  -webkit-text-fill-color: transparent;
  color: #ff5860;
  margin-right: 7px;
  opacity: 0.8;
  font-family: "Open Sans", sans-serif;
}
.card__category a:after {
  content: ",";
  position: absolute;
  display: block;
  left: 100%;
  top: 0;
  background-image: -webkit-linear-gradient(0deg, #ff55a5 0%, #ff5860 100%);
  -webkit-background-clip: text;
  -webkit-text-fill-color: transparent;
  color: #ff5860;
}
.card__category a:last-child {
  margin-right: 0;
}
.card__category a:last-child:after {
  display: none;
}
.card__category a:hover {
  opacity: 1;
}

.card__list {
  display: none;
}
.card__description {
  display: none;
}
.card__meta {
  display: none;
}
.card--details .card__cover img {
  width: 100%;
  max-width: 270px;
}
.card--details .card__cover:before {
  display: none;
}
.card--details .card__cover:hover {
  -webkit-box-shadow: none;
  box-shadow: none;
}
.card--details .card__description {
  display: block;
  margin-top: 15px;
  font-family: "Open Sans", sans-serif;
  font-size: 15px;
  line-height: 25px;
  color: rgba(255, 255, 255, 0.7);
  letter-spacing: 0.2px;
}
.card--details .card__list {
  display: inline-flex;
  flex-direction: row;
  justify-content: flex-start;
  align-items: center;
  margin-left: 15px;
}
.card--details .card__list li {
  border: 1px solid rgba(255, 255, 255, 0.26);
  padding: 5px 5px 4px;
  line-height: 100%;
  -webkit-border-radius: 4px;
  border-radius: 4px;
  margin-right: 10px;
  font-size: 12px;
  font-weight: 700;
  color: rgba(255, 255, 255, 0.65);
}
.card--details .card__list li:last-child {
  margin-right: 0;
}
.card--details .card__wrap {
  display: flex;
  flex-direction: row;
  justify-content: flex-start;
  align-items: center;
  margin-top: 15px;
}
.card--details .card__content {
  margin-top: 15px;
}
.card--details .card__meta {
  margin-top: 15px;
  display: block;
  font-size: 15px;
  line-height: 24px;
  color: rgba(255, 255, 255, 0.7);
}
.card--details .card__meta span {
  color: rgba(0, 0, 0, 0.7);
  margin-right: 7px;
}
.card--details .card__meta li {
  display: flex;
  flex-direction: row;
  justify-content: flex-start;
  align-items: flex-start;
  flex-wrap: wrap;
  width: 100%;
  font-family: "Open Sans", sans-serif;
}
.card--details .card__meta li:last-child {
  margin-bottom: 0;
}
.card--details .card__meta a {
  font-size: 15px;
  position: relative;
  background-image: -webkit-linear-gradient(0deg, #ff55a5 0%, #ff5860 100%);
  -webkit-background-clip: text;
  -webkit-text-fill-color: transparent;
  color: #ff5860;
  margin-right: 7px;
  opacity: 0.8;
}
.card--details .card__meta a:after {
  content: ",";
  position: absolute;
  display: block;
  left: 100%;
  top: 0;
  background-image: -webkit-linear-gradient(0deg, #ff55a5 0%, #ff5860 100%);
  -webkit-background-clip: text;
  -webkit-text-fill-color: transparent;
  color: #ff5860;
}
.card--details .card__meta a:last-child {
  margin-right: 0;
}
.card--details .card__meta a:last-child:after {
  display: none;
}
.card--details .card__meta a:hover {
  opacity: 1;
}
.card--details .card__rate {
  margin-top: 0;
}
@media (min-width: 576px) {
  .card--list .card__content {
    margin-top: 0;
    height: 212px;
    overflow: hidden;
    position: relative;
  }
  .card--list .card__title {
    font-size: 20px;
    line-height: 24px;
    margin-bottom: 5px;
    margin-top: -4px;
  }
  .card--list .card__rate {
    margin-top: 0;
  }
  .card--details .card__content {
    margin-top: 0;
  }
  .card--details .card__wrap {
    margin-top: 0;
  }
  .card--big .card__title {
    font-size: 20px;
  }
  .card__list {
    display: inline-flex;
    flex-direction: row;
    justify-content: flex-start;
    align-items: center;
    margin-left: 15px;
  }
  .card__list li {
    border: 1px solid rgba(255, 255, 255, 0.1);
    padding: 5px 5px 4px;
    line-height: 100%;
    -webkit-border-radius: 4px;
    border-radius: 4px;
    margin-right: 10px;
    font-size: 12px;
    font-weight: 700;
    color: rgb(0, 0, 0);
  }
  .card__list li:last-child {
    margin-right: 0;
  }
  .card__description {
    display: block;
    margin-top: 10px;
  }
  .card__description p {
    font-family: "Open Sans", sans-serif;
    font-size: 15px;
    line-height: 25px;
    color: rgba(3, 3, 3, 0.7);
    margin-bottom: 15px;
    letter-spacing: 0.2px;
  }
  .card__description p:last-child {
    margin-bottom: 0;
  }
  .card__wrap {
    display: flex;
    flex-direction: row;
    justify-content: flex-start;
    align-items: center;
    margin-top: 10px;
  }
}
@media (min-width: 768px) {
  .card--list {
    margin-bottom: 50px;
  }
  .card--list .card__content {
    height: 310px;
  }
}
@media (min-width: 992px) {
  .card--list .card__content {
    height: 190px;
  }
}
@media (min-width: 1200px) {
  .card--big .card__play {
    width: 80px;
    height: 80px;
    margin: -40px 0 0 -40px;
    font-size: 44px;
  }
  .card--big .card__play i {
    margin: 2px 0 0 5px;
  }
  .card--big .card__title {
    font-size: 22px;
  }
  .card--list .card__title {
    font-size: 22px;
  }
  .card--list .card__content {
    height: 237px;
  }
  .card--details {
    margin-bottom: 0;
  }
  .card--series {
    margin-bottom: 30px;
  }
}

/*==============================
	Home
==============================*/
.home {
  margin-top: 70px;
  position: relative;
  display: block;
  /* background-color: #2b2b31; */
  padding: 40px 0;
}
.home .container {
  position: relative;
  z-index: 2;
}
.home__bg {
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  z-index: 1;
}
.home__cover {
  opacity: 0.07;
}
.home__title {
  color: #fff;
  text-transform: uppercase;
  font-weight: 300;
  font-size: 28px;
  margin: 0;
  padding-right: 70px;
}
.home__title b {
  font-weight: 700;
}
.home__carousel .item {
  margin-top: 25px;
}
.home__carousel .card {
  margin-bottom: 0;
}
.home__nav {
  font-size: 38px;
  color: #fff;
  opacity: 0.7;
  position: absolute;
  top: 50%;
  height: 24px;
  margin-top: -12px;
  right: 15px;
  display: block;
  z-index: 2;
}
.home__nav i {
  line-height: 24px;
  height: 24px;
  display: block;
}
.home__nav i:before {
  line-height: 24px;
}
.home__nav--prev {
  right: 60px;
}
.home__nav:hover {
  opacity: 1;
}
.home--bg:before {
  content: "";
  z-index: 1;
  position: absolute;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  display: block;
  opacity: 0.06;
}
@media (min-width: 576px) {
  .home__title {
    font-size: 30px;
  }
}
@media (min-width: 768px) {
  .home {
    margin-top: 90px;
    padding: 60px 0;
  }
  .home__title {
    font-size: 32px;
  }
  .home__carousel .item {
    margin-top: 30px;
  }
}
@media (min-width: 1200px) {
  .home {
    padding: 70px 0;
  }
  .home__title {
    font-size: 36px;
  }
}

